# userver-paddle

./: .clang-format  .gitignore  CMakeLists.txt  README.md  docker-compose.yaml
.devcontainer/: devcontainer.json
examples/: CMakeLists.txt
examples/webhook/: CMakeLists.txt  main.cpp  static_config.yaml
paddle/: CMakeLists.txt
paddle/include/paddle/: types.hpp
paddle/include/paddle/auth/: signature.hpp
paddle/include/paddle/components/: client.hpp  event_replay_controller.hpp  price_cache.hpp  product_cache.hpp  webhook_secret_cache.hpp
paddle/include/paddle/handlers/: address_handler_base.hpp  api_key_handler_base.hpp  business_handler_base.hpp  client_token_handler_base.hpp  customer_handler_base.hpp  event_dispatcher.hpp  event_sink_base.hpp  handle_result.hpp  handlers.hpp  payment_method_handler_base.hpp  price_handler_base.hpp  product_handler_base.hpp  subscription_handler_base.hpp  transaction_handler_base.hpp  webhook_handler.hpp
paddle/include/paddle/types/: api_keys.hpp  billing.hpp  client_token.hpp  convert.hpp  customers.hpp  discounts.hpp  duration.hpp  enums.hpp  events.hpp  formats.hpp  fwd.hpp  ids.hpp  money.hpp  notification_settings.hpp  payment_method.hpp  permissions.hpp  price.hpp  price_preview.hpp  product.hpp  response.hpp  subscriptions.hpp  timestamp.hpp  transactions.hpp
paddle/src/paddle/auth/: signature.cpp
paddle/src/paddle/components/: client.cpp  event_replay_controller.cpp  price_cache.cpp  product_cache.cpp  scope_names.hpp  webhook_secret_cache.cpp
paddle/src/paddle/handlers/: address_handler_base.cpp  api_key_handler_base.cpp  business_handler_base.cpp  client_token_handler_base.cpp  customer_handler_base.cpp  event_dispatcher.cpp  handlers.cpp  payment_method_handler_base.cpp  price_handler_base.cpp  product_handler_base.cpp  subscription_handler_base.cpp  transaction_handler_base.cpp  webhook_handler.cpp
paddle/src/paddle/types/: client_token.cpp  events.cpp  payment_method.cpp  price.cpp  product.cpp  subscriptions.cpp  transactions.cpp
paddle/tests/: client_token_test.cpp  money_test.cpp  notification_settings_test.cpp  products_test.cpp  signature_test.cpp  subscription_test.cpp
